added information header to file

--- a/week1/add_some_numbers.html
+++ b/week1/add_some_numbers.html
@@ -1,5 +1,17 @@
 <html lang="en">
 <head>
+ <!--
+   / *-- HTML FILE -------------------------------------------------------------
+    *  Application: JavaScript week 1 homework
+    *      Purpose: to prompt a user to enter two numbers and then add
+    *    File Name: add_some_numbers.html
+    *       Author: Norman McWilliams           Tester:
+    * Date created: 2018-06-25                  Date updated:
+    * Time created:                             Time updated:
+    *  comments: need to come back and make some changes to validate input
+    *-----------------------------------------------------------------------------
+    */
+    -->
     <style>
 
     </style>
@@ -7,9 +19,9 @@
 	<!--
         var num1 = 0;   // 1st number
         var num2 = 0;   // 2nd number
-        var num1Valid = false;
-        var num2Valid = false;
-		-->
+        var num1Valid = false; // to be used to validate input
+        var num2Valid = false; // to be used to validate input
+    -->
     </script>
 </head>
 <body>
