--- a/table.html
+++ b/table.html
@@ -1,8 +1,7 @@
-
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<!--
+	<!--
    / *-- HTML FILE -------------------------------------------------------------
     *  Application: JavaScript week 2 homework
     *      Purpose: to create a calculator in JavaScript
@@ -21,7 +20,6 @@
 	<title>My 1st Calculator</title>
 	<!-- Bootstrap -->
 	<link href="css/bootstrap-4.0.0.css" rel="stylesheet">
-
 	<style>
 td, th {
 	border: 1px solid #CCC;
@@ -41,6 +39,7 @@ td, th {
 }
 </style>
 	<script>
+	var numStream = "";
 	var operand1 = 0;
 		var operand2 = 0;
 		var results = 0;
@@ -63,25 +62,25 @@ td, th {
   </tr>
       <tr>
     <td>OFF</td>
-		  <td class="num_style"><button id="$7" class="num_style">7</button></td>
-    <td id="$8" class="num_style" onClick="dispClick(8)">8</td>
-    <td id="$9" class="num_style" onClick="dispClick(9)">9</td>
+    <td class="num_style"><button id="$7" class="num_style">7</button></td>
+    <td class="num_style"><button id="$8" class="num_style">8</button></td>
+    <td class="num_style"><button id="$9" class="num_style">9</button></td>
     <td>%</td>
     <td>&#8730;</td>
   </tr>
       <tr>
     <td >UD</td>
-    <td id="$4" class="num_style" onClick="dispClick(4)">4</td>
-    <td id="$5" class="num_style" onClick="dispClick(5)">5</td>
-    <td id="$6" class="num_style" onClick="dispClick(6)">6</td>
+    <td class="num_style"><button id="$4" class="num_style">4</button></td>
+    <td class="num_style"><button id="$5" class="num_style">5</button></td>
+    <td class="num_style"><button id="$6" class="num_style">6</button></td>
     <td>X</td>
     <td>DIV</td>
   </tr>
       <tr>
     <td>CE</td>
-    <td id="$1" class="num_style" onClick="dispClick(1)">1</td>
-    <td id="$2" class="num_style" onClick="dispClick(2)">2</td>
-    <td id="$3" class="num_style" onClick="dispClick(3)">3</td>
+    <td class="num_style"><button id="$1" class="num_style">1</button></td>
+    <td class="num_style"><button id="$2" class="num_style">2</button></td>
+    <td class="num_style"><button id="$3" class="num_style">3</button></td>
     <td id="$add" rowspan="2" onClick="dispClick('+')" >+</td>
     <td id="$sub"  onClick="dispClick('-')">-</td>
   </tr>
@@ -101,7 +100,12 @@ td, th {
 <script src="js/popper.min.js"></script> 
 <script src="js/bootstrap-4.0.0.js"></script> 
 <script>
-		document.getElementById("$7").addEventListener("click", function(){alert("7 was clicked");})
+		document.getElementById("$7").addEventListener("click", Event() {
+													  
+	;})	
+		}
+													
+	
 	console.log()
 	/*
 		if (! isNaN(n)) { // if it's a number concant it to the string
