--- a/table.html
+++ b/table.html
@@ -11,6 +11,9 @@
     * Time created:                             Time updated: 3:20pm
     *  comments: need to come back and make some changes to validate input
     *  need to find out how to keep page working after enter has been clicked
+    *  ver 2.0 changed active table cells to buttons that respond to onclick mouse events.
+    *  need to apply correct logic for negative numbers "+/-" so I used Math.abs()
+    *
     *-----------------------------------------------------------------------------
     */
     -->
