--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                 <div class="card-body">
                    <h4 class="card-title">Week One Assignment</h4>
                    <p class="card-text"><a href="week1/add_some_numbers.html">2018-06-26 Add some numbers</a></p>
+                    <p class="card-text"><a href="calculator.html">2018-07-02 calculator ver 2.0</a></p>
                    <br><br>
                    <a href="#" class="btn btn-primary">Go somewhere</a>
                 </div>
