--- a/table.html
+++ b/table.html
@@ -5,7 +5,7 @@
     / *-- HTML FILE -------------------------------------------------------------
     *  Application: JavaScript week 2 homework
     *      Purpose: to create a calculator in JavaScript
-    *    File Name: add_some_numbers.html
+    *    File Name: calculator.html
     *       Author: Norman McWilliams           Tester:
     * Date created: 2018-06-26                  Date updated: 2018-06-28
     * Time created:                             Time updated: 3:20pm
