cleaned up code

--- a/calculator.html
+++ b/calculator.html
@@ -7,12 +7,15 @@
     *      Purpose: to create a calculator in JavaScript
     *    File Name: calculator.html
     *       Author: Norman McWilliams           Tester:
-    * Date created: 2018-06-26                  Date updated: 2018-07-02
-    * Time created:                             Time updated: 5:00pm
-    *  comments: need to come back and make some changes to validate input
+    * Date created: 2018-06-26                  Date updated: 2018-07-04
+    * Time created:                             Time updated: 9:50am
+    *  comments:
+    * 2018-07-04 deleted unnecessary functions
+     need to come back and make some changes to validate input
     *  need to find out how to keep page working after enter has been clicked
     *  ver 2.0 changed active table cells to buttons that respond to onclick mouse events.
     *  need to apply correct logic for negative numbers "+/-" so I used Math.abs()
+    *
     *
     *-----------------------------------------------------------------------------
     */
