solved the red cell problem with a "else if" (y === 1) and stopped printing values in the generated <tr> tags.

--- a/number_grid10.html
+++ b/number_grid10.html
@@ -47,7 +47,7 @@ To solve the blue color numbers we print out a blue class number for all numbers
 <table>
     <script>
         for (y = 0; y <= 10; ++y) { // vertical numbers
-            document.write("<tr>" + y + "</tr>");
+            document.write("<tr></tr>"); // stopped printing numbers in the row values
 
             for (x = 0; x <= 10; ++x) { // horizontal numbers
                 z = y * x;
