solved the red cell problem with a "else if" (y === 1) and stopped printing values in the generated <tr> tags.

--- a/number_grid10.html
+++ b/number_grid10.html
@@ -1,12 +1,12 @@
 <html>
 <head>
     <!--
-nlm-2018-07-05
+nlm-2018-07-05 6:17pm
      To  solve the problem of the grid you need to use geometry in XYZ coordinates. For every x columns (horizontal) printed there must be 10 y rows (vertical) printed below it.
 To solve the diagonal green color the factors of (x * y)  when (x == y) works.  For each z (cell position) that is equal to x==y we change the color of the cell.
 To solve the blue color numbers we print out a blue class number for all numbers in the y loop that is <10 (less than 10).
-	1. Why is my red not working?
-	2. How can I get rid of the 0's and the 0-9 at the top of the page?
+g   red was not working because I wasn't using in on a <td> tag made the correction
+	1. How can I get rid of the 0's and the 0-9 at the top of the page?
 
     -->
 
