started for loops with 1 and used the x++ post incrementer instead.

--- a/number_grid10.html
+++ b/number_grid10.html
@@ -46,10 +46,10 @@ g   red was not working because I wasn't using in on a <td> tag made the correct
 
 <table>
     <script>
-        for (y = 0; y <= 10; ++y) { // vertical numbers
+        for (y = 1; y <= 10; y++) { // vertical numbers
             document.write("<tr></tr>"); // stopped printing numbers in the row values
 
-            for (x = 0; x <= 10; ++x) { // horizontal numbers
+            for (x = 1; x <= 10; x++) { // horizontal numbers
                 z = y * x;
 
                 if (x === y) {
